[package]
name = "router-flood"
version = "0.0.1"
edition = "2021"
description = "Educational DDoS simulation tool for local network stress testing"
license = "MIT"
keywords = ["network", "testing", "ddos", "simulation", "stress-test"]
categories = ["network-programming", "simulation"]

[dependencies]
pnet = "0.35.0"
rand = "0.8.5"
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full", "signal"] }
libc = "0.2.155"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
sysinfo = "0.31"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.14"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
futures = "0.3"
